# control

./: .gitignore  README.md  compute_simulator.py  pyproject.toml  requirements.txt
config/: default_config.example.json  test_config.json
control/: __init__.py  __main__.py  config.py  config_py.py  readme.md
control/cloud/: __init__.py  binary.py  client.py  protocol.py
control/device_manager/: __init__.py  command.py  connection.py  monitor.py
control/keyboard/: __init__.py  client.py  sequence.py
control/live/: __init__.py  commands.py  handler.py
control/sandbox/: __init__.py  runner.py
control/verification/: __init__.py  comparator.py  registry.py  verifier.py
control/workflows/: __init__.py  executor.py  sequence.py  step.py
memory-bank/: activeContext.md  adb_connection.md  advanced_testing.md  control_testing_strategy.md  integrating_tiktok_workflow.md  productContext.md  projectbrief.md  protocol_reference.md  reference_chat.md  reference_chat_2.md  reference_code.md  systemPatterns.md  techContext.md  test_learnings.md  testing_instructions.md  testing_vs_production.md  version_8_specs.md
memory-bank/reference code/: apk.py  app_registry.json  clipboard_utils.py  connection_discord_bot_singleton.py  connection_manager.py  connection_monitor_updated.py  core_device_ops.py  device_config.json  explorer_7.py  player_7.py  screen_verifier.py  sequence_recorder.py  swipe.py  tap.py  test_special.py  type.py
scripts/: install.sh
tests/: README.md  conftest.py  requirements.txt
tests/integration/: test_launch_tiktok.py  test_screen_verifier.py  (+1 more)
(+9 files in other folders)
