[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "control"
version = "0.1.0"
description = "Control System"
requires-python = ">=3.13"
dependencies = [
    "pillow>=10.0.0",
    "websockets==12.0",
    "cryptography==41.0.7",
    "typing-extensions==4.9.0"
]
